name: network-raw
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: David Kraeutmann
synopsis: TODO
description:
    <https://github.com/KaneTW/network-raw#readme>
category: TODO
extra-source-files:
    README.md
    stack.yaml

source-repository head
    type: git
    location: https://github.com/KaneTW/network-raw

library
    exposed-modules:
        Example
    build-depends:
        base ==4.8.*
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -Wall

test-suite network-raw-test-suite
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base -any,
        network-raw -any,
        tasty ==0.11.0.2,
        tasty-hspec ==1.1.2
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -threaded -Wall -Werror

benchmark network-raw-benchmark
    type: exitcode-stdio-1.0
    main-is: Benchmark.hs
    build-depends:
        base -any,
        network-raw -any,
        criterion ==1.1.0.0
    default-language: Haskell2010
    hs-source-dirs: benchmark
    ghc-options: -threaded -Wall
