name: network-raw
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: David Kraeutmann
synopsis: TODO
description:
    <https://github.com/KaneTW/network-raw#readme>
category: TODO
extra-source-files:
    README.md
    stack.yaml

source-repository head
    type: git
    location: https://github.com/KaneTW/network-raw

library
    exposed-modules:
                    Network.Raw.IPv4
                  , Network.Raw.Windows
    build-depends:
                  base ==4.8.*
                , bytestring
                , binary
                , binary-bits
                , binary-conduit
                , conduit
                , conduit-combinators
                , conduit-extra
                , containers
                , exceptions
                , ioctl
                , lens
                , mtl
                , network
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -Wall

test-suite network-raw-test-suite
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base -any,
        network-raw -any,
        tasty -any,
        tasty-hspec -any
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -threaded -Wall -Werror

benchmark network-raw-benchmark
    type: exitcode-stdio-1.0
    main-is: Benchmark.hs
    build-depends:
        base -any,
        network-raw -any,
        criterion -any
    default-language: Haskell2010
    hs-source-dirs: benchmark
    ghc-options: -threaded -Wall
